--- a/1PageAccueil.html
+++ b/1PageAccueil.html
@@ -1,1 +1,32 @@
-PAGE ACCUEIL
+// PAGE ACCUEIL
+<!DOCTYPE HTML>
+<html lang="fr">
+	<head>
+		<meta charset="utf-8">
+		<link href="style.css" rel="stylesheet">
+		<title>Accueil</title>
+		
+	</head>
+	<body>
+	
+		<header>
+			
+		</header>
+		
+			
+		<div class="contenu">
+			<h1>Find out more about our computers for home, industry and education at <strong>raspberrypi.com</strong></h1>
+			<p><b>Désolée je n'ai pas pu aller plus loin. Je n'ai pas pu aligner le bouton "Donate" et les menus avec le logo, désolée. J'ai fait ce que j'ai pu.</b></p>
+			<br></br>
+		</div>
+		
+		<footer>
+			<div class="contenu-footer">
+				
+				
+			</div>
+		</footer>
+	
+	</body>
+		
+</html>
