--- a/8PageComp6.html
+++ b/8PageComp6.html
@@ -1,1 +1,83 @@
-Competence 6
+<!-- PAGE COMPETENCE 6 -->
+<!DOCTYPE HTML>
+<html lang="fr">
+	<head>
+		<meta charset="utf-8">
+		<link href="style.css" rel="stylesheet">
+		<title>Compétence 6</title>	
+	</head>
+	
+	<body>
+		<!-- HEADER -->
+		<header>
+			<div class="contenu-header">
+				<img id="logo-IUT3" alt="Logo de l'IUT Paul Sabatier" src="img/logo-IUT-UT3.jpg">
+                <img id="logo-UT3" alt="Logo de l'Université Paul Sabatier" src="img/logo-UT3.png">
+                <img id="logo-BUT" alt="Logo du Bachelor Universitaire de Technologie" src="img/logo_BUT.png">
+				<nav>
+				  <ul>
+					<li><a href="1PageAccueil.html">Accueil</a></li>
+					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
+					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
+						<ul class="sous">
+							<li><a href="3PageComp1">Compétence 1</a></li>
+							<li><a href="4PageComp2">Compétence 2</a></li>
+							<li><a href="5PageComp3">Compétence 3</a></li>
+							<li><a href="6PageComp4">Compétence 4</a></li>
+							<li><a href="7PageComp5">Compétence 5</a></li>
+							<li><a href="8PageComp6">Compétence 6</a></li>
+						</ul>
+					</li>
+					<li><a href="9PageContact.html">Contact</a></li>
+				  </ul>
+				</nav>
+			</div>
+		</header>
+		
+		<main>	
+		<div class="contenu">
+
+		<h1> Compétence 6</h1>
+	
+		</div>
+		
+		</main>
+		
+		<!--FOOTER-->
+		<footer>
+			<div class="contenu-footer">
+				<div>
+					<ul class="plan-site">
+						<!--Plan du site-->
+						<li><a href="1PageAccueil.html">Accueil</a></li>
+						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
+						</li>
+						<li><a href="3PageComp1.html">Compétences</a>
+							<ul>
+								<li><a href="3PageComp1">Compétence 1</a></li>
+								<li><a href="4PageComp2">Compétence 2</a></li>
+								<li><a href="5PageComp3">Compétence 3</a></li>
+								<li><a href="6PageComp4">Compétence 4</a></li>
+								<li><a href="7PageComp5">Compétence 5</a></li>
+								<li><a href="8PageComp6">Compétence 6</a></li>
+							</ul>
+						</li>
+						<li><a href="9PageContact.html">Contact</a></li>
+					</ul>
+				</div>
+
+				<!--Site du CNIL-->
+				<div>
+					<a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees" class="partie-RGPD">CNIL - RGPD</a>
+				</div>
+				
+				<!--Logo de l'entreprise-->
+				<div >
+					<img id="logoMJM" alt="Logo de MJM Entertainment" src="img/Logo1.png">
+				</div>
+			</div>
+		</footer>
+	
+	</body>
+		
+</html>
