--- a/2PagePresentationBUT.html
+++ b/2PagePresentationBUT.html
@@ -11,25 +11,25 @@
 		<!-- HEADER -->
 		<header>
 			<div class="contenu-header">
-				<img id="logo-IUT3" alt="Logo de l'IUT Paul Sabatier" src="img/logo-IUT-UT3.jpg">
-                <img id="logo-UT3" alt="Logo de l'Université Paul Sabatier" src="img/logo-UT3.png">
-                <img id="logo-BUT" alt="Logo du Bachelor Universitaire de Technologie" src="img/logo_BUT.png">
+				<img id="logo-IUT3" alt="Logo de l'IUT Paul Sabatier" src="/Users/iyamu/Documents/2022-2023/R102/Mini projet/logo-UT3_UFTMP.jpg">
+                <img id="logo-UT3" alt="Logo de l'Université Paul Sabatier" src="/Users/iyamu/Documents/2022-2023/R102/Mini projet/Logo-IUT-TAC-UT3-2019.jpg">
+                <img id="logo-BUT" alt="Logo du Bachelor Universitaire de Technologie" src="/Users/iyamu/Documents/2022-2023/R102/Mini projet/logo-IUT-UT3-carre2019.jpg">
 				<nav>
-				  <ul>
-					<li><a href="1PageAccueil.html">Accueil</a></li>
-					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
-						<ul class="sous">
-							<li><a href="3PageComp1">Compétence 1</a></li>
-							<li><a href="4PageComp2">Compétence 2</a></li>
-							<li><a href="5PageComp3">Compétence 3</a></li>
-							<li><a href="6PageComp4">Compétence 4</a></li>
-							<li><a href="7PageComp5">Compétence 5</a></li>
-							<li><a href="8PageComp6">Compétence 6</a></li>
-						</ul>
-					</li>
-					<li><a href="9PageContact.html">Contact</a></li>
-				  </ul>
+				    <ul>
+                        <li><a href="1PageAccueil.html">Accueil</a></li>
+                        <li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
+                        <li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
+                            <ul class="sous">
+                                <li><a href="3PageComp1">Compétence 1</a></li>
+                                <li><a href="4PageComp2">Compétence 2</a></li>
+                                <li><a href="5PageComp3">Compétence 3</a></li>
+                                <li><a href="6PageComp4">Compétence 4</a></li>
+                                <li><a href="7PageComp5">Compétence 5</a></li>
+                                <li><a href="8PageComp6">Compétence 6</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="9PageContact.html">Contact</a></li>
+				    </ul>
 				</nav>
 			</div>
 		</header>
@@ -60,13 +60,13 @@
                                 du semestre 1</td>
                         </tr>
                         <tr class="competence">
-                            <th>Ressource</th>
-                            <th>C1: Réaliser un développement d'application</th>
-                            <th>C2: Optimiser des applications informatiques</th>
-                            <th>C3: Administrer des systèmes informatiques communicants complexes</th>
-                            <th>C4: Gérer des données de l'information</th>
-                            <th >C5: Conduire un projet</th>
-                            <th >C6: Travailler dans une équipe informatique</th>
+                            <th scope="row">Ressource</th>
+                            <th scope="row">C1: Réaliser un développement d'application</th>
+                            <th scope="row">C2: Optimiser des applications informatiques</th>
+                            <th scope="row">C3: Administrer des systèmes informatiques communicants complexes</th>
+                            <th scope="row">C4: Gérer des données de l'information</th>
+                            <th scope="row">C5: Conduire un projet</th>
+                            <th scope="row">C6: Travailler dans une équipe informatique</th>
                         </tr>
                         <tr>
                             <th scope="row">R1.01:Initiation au développement</th>
@@ -181,9 +181,67 @@
                 </div>
             </article>
 				
-				
+            <div class="decorateur"></div>
+
+            <section class="competences">
+
+                <article class="blocGauche flex pointille">
+                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence1.png" class="img"></a>
+                    <ul class="tableauC">
+                        <li>Ressource R1.01</li>
+                        <li>Ressource R1.02</li>
+                        <li>Ressource R1.10</li>
+                    </ul>
+                </article>
+                <article class="blocDroit flex pointille">
+                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence2.png" class="img"></a>
+                    <ul class="tableauC">
+                        <li>Ressource R1.01</li>
+                        <li>Ressource R1.02</li>
+                        <li>Ressource R1.04</li>
+                        <li>Ressource R1.06</li>
+                        <li>Ressource R1.07</li>
+                    </ul>
+                </article>
+                <article class="blocGauche flex pointille">
+                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence3.png" class="img"></a>
+                    <ul class="tableauC">
+                        <li>Ressource R1.03</li>
+                        <li>Ressource R1.04</li>
+                        <li>Ressource R1.10</li>
+                        <li>Ressource R1.11</li>
+                    </ul>
+                </article>
+                <article class="blocDroit flex pointille">
+                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence4.png" class="img"></a>
+                    <ul class="tableauC">
+                        <li>Ressource R1.05</li>
+                        <li>Ressource R1.06</li>
+                        <li>Ressource R1.09</li>
+                    </ul>
+                </article>
+                <article class="blocGauche flex pointille">
+                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence5.png" class="img"></a>
+                    <ul class="tableauC">
+                        <li>Ressource R1.02</li>
+                        <li>Ressource R1.08</li>
+                        <li>Ressource R1.11</li>
+                    </ul>
+                </article>
+                <article class="blocDroit flex pointille">
+                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence6.png" class="img"></a>
+                    <ul class="tableauC">
+                        <li>Ressource R1.02</li>
+                        <li>Ressource R1.08</li>
+                        <li>Ressource R1.09</li>
+                        <li>Ressource R1.10</li>
+                        <li>Ressource R1.11</li>
+                        <li>Ressource R1.12</li>
+                    </ul>
+                </article>
+            </section>
 		</div>
-		
+	
 		</main>
 		
 		<!--FOOTER-->
