--- a/2PagePresentationBUT.html
+++ b/2PagePresentationBUT.html
@@ -11,9 +11,9 @@
 		<!-- HEADER -->
 		<header>
 			<div class="contenu-header">
-				<img id="logo-IUT3" alt="Logo de l'IUT Paul Sabatier" src="/Users/iyamu/Documents/2022-2023/R102/Mini projet/logo-UT3_UFTMP.jpg">
-                <img id="logo-UT3" alt="Logo de l'Université Paul Sabatier" src="/Users/iyamu/Documents/2022-2023/R102/Mini projet/Logo-IUT-TAC-UT3-2019.jpg">
-                <img id="logo-BUT" alt="Logo du Bachelor Universitaire de Technologie" src="/Users/iyamu/Documents/2022-2023/R102/Mini projet/logo-IUT-UT3-carre2019.jpg">
+				<img id="logo-IUT3" alt="Logo de l'IUT Paul Sabatier" src="">
+                <img id="logo-UT3" alt="Logo de l'Université Paul Sabatier" src="">
+                <img id="logo-BUT" alt="Logo du Bachelor Universitaire de Technologie" src="">
 				<nav>
 				    <ul>
                         <li><a href="1PageAccueil.html">Accueil</a></li>
@@ -186,7 +186,7 @@
             <section class="competences">
 
                 <article class="blocGauche flex pointille">
-                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence1.png" class="img"></a>
+                    <a href="3PageComp1.html"><img src="competence1.png" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.01</li>
                         <li>Ressource R1.02</li>
@@ -194,7 +194,7 @@
                     </ul>
                 </article>
                 <article class="blocDroit flex pointille">
-                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence2.png" class="img"></a>
+                    <a href="4PageComp2.html"><img src="competence2.png" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.01</li>
                         <li>Ressource R1.02</li>
@@ -204,7 +204,7 @@
                     </ul>
                 </article>
                 <article class="blocGauche flex pointille">
-                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence3.png" class="img"></a>
+                    <a href="5PageComp3.html"><img src="competence3.png" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.03</li>
                         <li>Ressource R1.04</li>
@@ -213,7 +213,7 @@
                     </ul>
                 </article>
                 <article class="blocDroit flex pointille">
-                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence4.png" class="img"></a>
+                    <a href="6PageComp4.html"><img src="competence4.png" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.05</li>
                         <li>Ressource R1.06</li>
@@ -221,7 +221,7 @@
                     </ul>
                 </article>
                 <article class="blocGauche flex pointille">
-                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence5.png" class="img"></a>
+                    <a href="7PageComp5.html"><img src="competence5.png" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.02</li>
                         <li>Ressource R1.08</li>
@@ -229,7 +229,7 @@
                     </ul>
                 </article>
                 <article class="blocDroit flex pointille">
-                    <a href=""><img src="\Users\iyamu\Documents\2022-2023\R102\Mini projet\competence6.png" class="img"></a>
+                    <a href="8PageComp6.html"><img src="competence6.png" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.02</li>
                         <li>Ressource R1.08</li>
@@ -255,12 +255,12 @@
 						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
-								<li><a href="3PageComp1">Compétence 1</a></li>
-								<li><a href="4PageComp2">Compétence 2</a></li>
-								<li><a href="5PageComp3">Compétence 3</a></li>
-								<li><a href="6PageComp4">Compétence 4</a></li>
-								<li><a href="7PageComp5">Compétence 5</a></li>
-								<li><a href="8PageComp6">Compétence 6</a></li>
+								<li><a href="3PageComp1.html">Compétence 1</a></li>
+								<li><a href="4PageComp2.html">Compétence 2</a></li>
+								<li><a href="5PageComp3.html">Compétence 3</a></li>
+								<li><a href="6PageComp4.html">Compétence 4</a></li>
+								<li><a href="7PageComp5.html">Compétence 5</a></li>
+								<li><a href="8PageComp6.html">Compétence 6</a></li>
 							</ul>
 						</li>
 						<li><a href="9PageContact.html">Contact</a></li>
