--- a/1PageAccueil.html
+++ b/1PageAccueil.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link href="style.css" rel="stylesheet">
+		<link href="stylee.css" rel="stylesheet">
 		<title>Le Bachelor Universitaire de Technologie</title>	
 	</head>
 	
@@ -35,7 +35,7 @@
 		</header>
 		
 		<main>	
-			<div class="contenu">
+			<div>
 			
 			
 				<!-- PREMIERE RECHERCHE : HISTORIQUE DU BUT-->
