--- a/6PageComp4.html
+++ b/6PageComp4.html
@@ -20,12 +20,12 @@
 					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
 					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
 						<ul class="sous">
-							<li><a href="3PageComp1">Compétence 1</a></li>
-							<li><a href="4PageComp2">Compétence 2</a></li>
-							<li><a href="5PageComp3">Compétence 3</a></li>
-							<li><a href="6PageComp4">Compétence 4</a></li>
-							<li><a href="7PageComp5">Compétence 5</a></li>
-							<li><a href="8PageComp6">Compétence 6</a></li>
+							<li><a href="3PageComp1.html">Compétence 1</a></li>
+							<li><a href="4PageComp2.html">Compétence 2</a></li>
+							<li><a href="5PageComp3.html">Compétence 3</a></li>
+							<li><a href="6PageComp4.html">Compétence 4</a></li>
+							<li><a href="7PageComp5.html">Compétence 5</a></li>
+							<li><a href="8PageComp6.html">Compétence 6</a></li>
 						</ul>
 					</li>
 					<li><a href="9PageContact.html">Contact</a></li>
@@ -34,11 +34,149 @@
 			</div>
 		</header>
 		
-		<main>	
-		<div class="contenu">
-
-		<h1> Compétence 4</h1>
-	
+		<main>
+		<!-- TITRE -->
+		<h1 class="but">Gérer des données de l'information</h1>
+		
+		<!-- ARTICLE 1 -->
+		<article class="flex">
+			<img src="img/competence4.png"
+			alt="Niveau 1 : Concevoir et mettre en place une base de données à partir d'un
+			cahier des charges client">
+			<ul>
+				<li>Mettre à jour et interroger nue base de données relationnelle (en requêtes directes
+				ou à travers une application)</li>
+				<li>Visualiser des données</li>
+				<li>Exploiter des données pour la prise de décisions</li>
+			</ul>
+		</article>
+		
+		<!-- ARTICLE 2 -->
+		<article class="separateur">
+			<h2>Evaluation de la compétence</h2>
+			<table>
+				<tr>
+					<th class="titre" colspan="4">Ressources intervenant dans la compétence 1</th>
+				</tr>
+				<tr>
+					<th scope="row">Ress</th>
+					<th scope="col">R1.05</th>
+					<th scope="col">R1.06</th>
+					<th scope="col">R1.09</th>
+				</tr>
+				<tr>
+					<th scope="row">Coeff (en %)</th>
+					<td>36</td>
+					<td>18</td>
+					<td>6</td>
+				</tr>
+			</table>
+		</article>
+		
+		<!-- ARTICLE 3 -->
+		<article>
+			<h2>SAE lié à la compétence</h2>
+			<p>
+			En partant d'un besoin exprimé par un client, il faut étudier puis réaliser
+			une base de données portant sur une partie du système d'information à développer.
+			Cette SAE permet un premier contact avec la formalisation et l'implémentation d'une
+			base de données.
+			</p>
+		</article>
+		<div class="decorateur"></div>
+		
+		<!-- ARTICLE 4 -->
+		<article class="articleSection">
+			<section class="box">
+				<h3>R1.05</h3>
+				<h3>Introduction aux bases de données et SQL</h3>
+				<div>
+					<ul>
+						<li class="principal">Apprentissages critiques</li>
+						<li>AC 1 : Mettre à jour et interroger une base de données relationnelle</li>
+						<li>AC 3 : Concevoir une base de données relationnelle à partir d'un
+						cahier des charges</li>
+					</ul>
+					<ul>
+						<li class="principal">L'objectif de cette ressource est l'initiation aux bases de données. 
+						Les savoirs de référence suivants devront être étudiés :</li>
+						<li>Approche de la conception des bases de données : modèle 
+						conceptuel de données et traduction vers le modèle relationnel + 
+						contrainte simple + redondance;</li>
+						<li>Algèbre relationnelle;</li>
+						<li>Base du SQL (Structurred Query Language) : langage de manipulation 
+						de données, langage de définition de données;</li>
+						<li>Eléments sur les jeux de tests + jeux de données;</li>
+						<li>Principes et utilisation d'un SGBD;</li>
+						<li>Utilisation d'Atelier de Génie Logiciel;</li>
+						<li>Formulaire et état.</li>
+					</ul>
+					<p>
+						Cette ressource permettra une première sensibilisation sur l'importance 
+						d'une base de données dans le système d'information de l'entreprise et 
+						montrera la complexité de la création d'une base répondant aux besoins et qui 
+						soit de bonne qualité.</p>
+				</div>
+			</section>		
+			<section class="box">
+				<h3>R1.06</h3>
+				<h3>Mathématiques discrètes</h3>
+				<div>
+					<ul>
+						<li class="principal">Apprentissages critiques</li>
+						<li>AC 1 : Mettre à jour et interroger une base de données relationnelle</li>
+					</ul>
+					<ul>
+						<li class="principal">L'objectif de ce module est de mettre en place les outils mathématiques
+						nécessaires au bases de l'informatique/ Les savoirs de référence suivants devront
+						être étudiés :</li>
+						<li>Logique (prédicats, propositions...);</li>
+						<li>Théorie des ensembles;</li>
+						<li>Dénombrement;</li>
+						<li>Algèbre de Boole;</li>
+						<li>Arithmétique modulaire;</li>
+						<li>Relations, applications;</li>
+						<li>Numération.</li>
+					</ul>
+					<p>
+						Cette ressource aide à formaliser et lettre en oeuvre des outils mathématiques
+						pour l'informatique. Elle accompagne la mise en place des bases de données
+						en explicitant les structures fondamentales de ces dernirèes.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.09</h3>
+				<h3>Economie durable et numérique</h3>
+				<div>
+					<ul>
+						<li class="principal">Apprentissages critiques</li>
+						<li>AC 1 : Mettre à jour et interroger une base de données relationnelle</li>
+					</ul>
+					<ul>
+						<li class="principal">L'objectif de cette ressource est de découvrir l'économie durable et
+						responsable. Les savoir de référence suivants devront être étudiés :</li>
+						<li>Fondements de l'économie (marchés et dysfonctionnements, acteurs 
+						économiques, croissance et déséquilibres économiques, politique économique,
+						mondialisation);</li>
+						<li>Ecoconception des services numériques (économie circulaire / numérique
+						responsable, enjeux du développement durable, régulation et impact du numérique);</li>
+						<li>Enjeux économiques des données de l'information (acteurs et modèles de l'économie
+						numérique, marché de la donnée).</li>
+					</ul>
+					<p>
+						L'essor des données de l'information dans la société actuelle amène
+						des nouveaux défis économiques. L'étude de la donnée dans contexte
+						permet une meilleure visualisation des données de l'information
+						manippulées au quotidien par l'informaticien, et présentées
+						dans la compétence 4. Les fondements de l'économie vus en compétence
+						6 représentent un incontournable pour appréhender l'écosystème numérique.</p>
+				</div>
+			</section>
+		</article>
+		
+		<!-- RETOUR AU DEBUT DE PAGE -->
+		<div class="flex">
+			<a href="#top" class="retour">↑ Retour en haut ↑</a>
 		</div>
 		
 		</main>
@@ -54,12 +192,12 @@
 						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
-								<li><a href="3PageComp1">Compétence 1</a></li>
-								<li><a href="4PageComp2">Compétence 2</a></li>
-								<li><a href="5PageComp3">Compétence 3</a></li>
-								<li><a href="6PageComp4">Compétence 4</a></li>
-								<li><a href="7PageComp5">Compétence 5</a></li>
-								<li><a href="8PageComp6">Compétence 6</a></li>
+								<li><a href="3PageComp1.html">Compétence 1</a></li>
+								<li><a href="4PageComp2.html">Compétence 2</a></li>
+								<li><a href="5PageComp3.html">Compétence 3</a></li>
+								<li><a href="6PageComp4.html">Compétence 4</a></li>
+								<li><a href="7PageComp5.html">Compétence 5</a></li>
+								<li><a href="8PageComp6.html">Compétence 6</a></li>
 							</ul>
 						</li>
 						<li><a href="9PageContact.html">Contact</a></li>
