--- a/7PageComp5.html
+++ b/7PageComp5.html
@@ -20,12 +20,12 @@
 					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
 					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
 						<ul class="sous">
-							<li><a href="3PageComp1">Compétence 1</a></li>
-							<li><a href="4PageComp2">Compétence 2</a></li>
-							<li><a href="5PageComp3">Compétence 3</a></li>
-							<li><a href="6PageComp4">Compétence 4</a></li>
-							<li><a href="7PageComp5">Compétence 5</a></li>
-							<li><a href="8PageComp6">Compétence 6</a></li>
+							<li><a href="3PageComp1.html">Compétence 1</a></li>
+							<li><a href="4PageComp2.html">Compétence 2</a></li>
+							<li><a href="5PageComp3.html">Compétence 3</a></li>
+							<li><a href="6PageComp4.html">Compétence 4</a></li>
+							<li><a href="7PageComp5.html">Compétence 5</a></li>
+							<li><a href="8PageComp6.html">Compétence 6</a></li>
 						</ul>
 					</li>
 					<li><a href="9PageContact.html">Contact</a></li>
@@ -33,12 +33,142 @@
 				</nav>
 			</div>
 		</header>
+<main>
 		
-		<main>	
-		<div class="contenu">
-
-		<h1> Compétence 5</h1>
-	
+		<!-- TITRE -->
+		<h1 class="but">Réaliser un développement d'application</h1>
+		
+		<!-- ARTICLE 1 : APPRENTISSAGE CRITIQUE DU NIVEAU 1-->
+		<article class="flex">
+			<img src="img/competence5.png" alt="Niveau 1 : Identifier les besoins métiers des clients et des utilisateurs">
+			<ul>
+				<li>Appréhender les besoins du client et de l'utilisateur</li>
+				<li>Mettre en place les outils de gestion de projet</li>
+				<li>Identifier les acteurs et els différentes phases d'un cycle de développement</li>
+			</ul>
+		</article>
+		<!-- ARTICLE 2 : EVALUATION-->
+		<article class="separateur">
+			<h2>Evaluation de la compétence</h2>
+			<table>
+				<tr>
+					<th class="titre" colspan="4">Ressources intervenant dans la compétence 1</th>
+				</tr>
+				<tr>
+					<th scope="row">Ress</th>
+					<th scope="col">R1.02</th>
+					<th scope="col">R1.08</th>
+					<th scope="col">R1.11</th>
+				</tr>
+				<tr>
+					<th scope="row">Coeff (en %)</th>
+					<td>18</td>
+					<td>27</td>
+					<td>15</td>
+				</tr>
+			</table>
+		</article>
+		<!-- ARTICLE 3 : SAE LIE A LA COMPETENCE-->
+		<article>
+			<h2>SAE lié à la compétence</h2>
+			<p>
+			En partant d'un besoin exprimé par un client, l'objectif est de réaliser une
+			<strong>application</strong> qui réponde à ce besoin. Cette SAE permet une 
+			première mise en pratique du <strong>développement</strong> autour d'un besoin 
+			client.
+			</p>
+		</article>
+		<div class="decorateur"></div>
+		
+		<!-- ARTICLE 4 : ENSEMBLE DES RESSOURCES INTERVENANT DANS LA COMPETENCE-->
+		<article class="articleSection">
+			<section class="box">
+				<h3>R1.02</h3>
+				<h3>Développement d'interfaces web</h3>
+				<div>
+					<ul>
+						<li class="principal">Apprentissages critiques</li>
+						<li>AC 4 : Développer des interfaces utilisateurs</li>
+					</ul>
+					<ul>
+						<li class="principal">L'objectif de cette ressource est d'apprendre les techniques de création de documents
+						numériques sur le web en réponse à des besoins client. Les savoirs de références suivants
+						devront être étudiés :</li>
+						<li>Spécifications d'interfaces utilisateurs, maquettage(sketch, scénarios, persona...);</li>
+						<li>Les technologies d'affichage du Web (ex : HTML, CSS...);</li>
+						<li>Tester la conformité des sites Web aux standards d'accessibilité W3C/WAI (World Wide Web 
+						Consortium / Web Accessibility Initiative).</li>
+					</ul>
+					<p>
+						Cette ressources est une concrétisation de la compétence 1 avec le support de la compétence 5.
+						En effet, l'apprentissage des interfaces web est une base pour réaliser un développement
+						d'application tout en appréhendant les besoins du client et de l'utilisateur.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.08</h3>
+				<h3>Gestion de projet et des organisations</h3>
+				<div>
+					<ul>
+						<li class="principal">Apprentissages critiques</li>
+						<li>AC 1 : Appréhender les besoins du client et de l'utilisateur</li>
+					</ul>
+					<ul>
+						<li class="principal">L'objectif de cette ressource est de découvrir l'organisation et la 
+						transformation numérique. Les savoirs de référence suivants devront être étudiés :</li>
+						<li>Fondement des organisations (définition et finalité de l'organisation, 
+						environnement de l'organisation, acteurs et fonctions de l'organisation, 
+						culture d'entreprise, situer une activité dans une organisation);</li>
+						<li>Caractéristiques stratégiques et structuelles des organisations (typologie
+						des organisations, diagnostics et choix stratégiques);</li>
+						<li>Enjeux de la transformation numérique des organisations (digitalisation
+						des organisations, nouvelles formes de management, structure en réseau et
+						entreprise virtuelle, responsabilité sociétale des entreprises).</li>
+					</ul>
+					<p>
+						La découverte de l'organisatin permet une compréhension des enjeux et les besoins
+						sous-jacents des projets internes et externes en animant les acteurs qui la 
+						composent (compétence 5). Les défis organisationnels du XXIe siècle, comme la 
+						transofrmation numérique des organisations, amènent à se questionner sur les 
+						évolutions informatiques et manaagériales dans le but de mieux appréhender 
+						l'écosystème numérique et le futur contexte professionnel (compétence 6).</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.11</h3>
+				<h3>Bases de la communication</h3>
+				<div>
+					<ul>
+						<li class="principal">Apprentissages critiques</li>
+						<li>AC 1 : Appréhender les besoins du client et de l'utilisateur</li>
+						<li>AC 3 : Identifier les acteurs et les différentes phases d'un cycle de 
+						développement</li>
+					</ul>
+					<ul>
+						<li class="principal">L'objectif de cette ressource est d'aborder les fondamentaux de la
+						communication. Les savoirs de référence suivants devront être étudiés :</li>
+						<li>Communication verbale et non verbale;</li>
+						<li>Recherche documentaire, appropriation, réutilisation de
+						l'information, prise de notes, analse critique des sources;</li>
+						<li>Développement d'une attitude critique;</li>
+						<li>Recueil des besoins (méthode de collecte, d'enquête, d'intervieux);</li>
+						<li>Conception de documents de communication (sous divers formats dont numérique).</li>
+					</ul>
+					<p>
+						Cette ressource permet une approche sur l'importance de bien communiquer face 
+						à un client, de formuler ses questions de manière claire et pertinente pour 
+						recueillir les besoins du client. La ressource permet de développer l'esprit critique 
+						et la capacité d'analyse nécessaires à la collecte d'informations. Enfin, la ressource 
+						permet la mise en place et l'appropriation d'outils de communication pour restituer 
+						les informations (sous formes diverses du papier au web) à destination d'un client, 
+						ou d'une équipe.</p>
+				</div>
+			</section>
+		</article>
+		
+		<!-- RETOUR AU DEBUT DE PAGE -->
+		<div class="flex">
+			<a href="#top" class="retour">↑ Retour en haut ↑</a>
 		</div>
 		
 		</main>
@@ -54,12 +184,12 @@
 						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
-								<li><a href="3PageComp1">Compétence 1</a></li>
-								<li><a href="4PageComp2">Compétence 2</a></li>
-								<li><a href="5PageComp3">Compétence 3</a></li>
-								<li><a href="6PageComp4">Compétence 4</a></li>
-								<li><a href="7PageComp5">Compétence 5</a></li>
-								<li><a href="8PageComp6">Compétence 6</a></li>
+								<li><a href="3PageComp1.html">Compétence 1</a></li>
+								<li><a href="4PageComp2.html">Compétence 2</a></li>
+								<li><a href="5PageComp3.html">Compétence 3</a></li>
+								<li><a href="6PageComp4.html">Compétence 4</a></li>
+								<li><a href="7PageComp5.html">Compétence 5</a></li>
+								<li><a href="8PageComp6.html">Compétence 6</a></li>
 							</ul>
 						</li>
 						<li><a href="9PageContact.html">Contact</a></li>
