--- a/7PageComp5.html
+++ b/7PageComp5.html
@@ -87,11 +87,11 @@
 				<h3>Développement d'interfaces web</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques</h4>
 						<li>AC 4 : Développer des interfaces utilisateurs</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est d'apprendre les techniques de création de documents
+						<li>L'objectif de cette ressource est d'apprendre les techniques de création de documents
 						numériques sur le web en réponse à des besoins client. Les savoirs de références suivants
 						devront être étudiés :</li>
 						<li>Spécifications d'interfaces utilisateurs, maquettage(sketch, scénarios, persona...);</li>
@@ -110,11 +110,11 @@
 				<h3>Gestion de projet et des organisations</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques</h4>
 						<li>AC 1 : Appréhender les besoins du client et de l'utilisateur</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est de découvrir l'organisation et la 
+						<li>L'objectif de cette ressource est de découvrir l'organisation et la 
 						transformation numérique. Les savoirs de référence suivants devront être étudiés :</li>
 						<li>Fondement des organisations (définition et finalité de l'organisation, 
 						environnement de l'organisation, acteurs et fonctions de l'organisation, 
@@ -138,14 +138,13 @@
 				<h3>R1.11</h3>
 				<h3>Bases de la communication</h3>
 				<div>
-					<ul>
-						<li class="principal">Apprentissages critiques</li>
+					<ul>h4>Apprentissages critiques</h4>
 						<li>AC 1 : Appréhender les besoins du client et de l'utilisateur</li>
 						<li>AC 3 : Identifier les acteurs et les différentes phases d'un cycle de 
 						développement</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est d'aborder les fondamentaux de la
+						<li>L'objectif de cette ressource est d'aborder les fondamentaux de la
 						communication. Les savoirs de référence suivants devront être étudiés :</li>
 						<li>Communication verbale et non verbale;</li>
 						<li>Recherche documentaire, appropriation, réutilisation de
@@ -181,7 +180,6 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
 								<li><a href="3PageComp1.html">Compétence 1</a></li>
