--- a/6PageComp4.html
+++ b/6PageComp4.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link href="style.css" rel="stylesheet">
+		<link href="stylee.css" rel="stylesheet">
 		<title>Compétence 4</title>	
 	</head>
 	
@@ -92,13 +92,13 @@
 				<h3>Introduction aux bases de données et SQL</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques</h4>
 						<li>AC 1 : Mettre à jour et interroger une base de données relationnelle</li>
 						<li>AC 3 : Concevoir une base de données relationnelle à partir d'un
 						cahier des charges</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est l'initiation aux bases de données. 
+						<li>L'objectif de cette ressource est l'initiation aux bases de données. 
 						Les savoirs de référence suivants devront être étudiés :</li>
 						<li>Approche de la conception des bases de données : modèle 
 						conceptuel de données et traduction vers le modèle relationnel + 
@@ -123,11 +123,11 @@
 				<h3>Mathématiques discrètes</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques</h4>
 						<li>AC 1 : Mettre à jour et interroger une base de données relationnelle</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de ce module est de mettre en place les outils mathématiques
+						<li>L'objectif de ce module est de mettre en place les outils mathématiques
 						nécessaires au bases de l'informatique/ Les savoirs de référence suivants devront
 						être étudiés :</li>
 						<li>Logique (prédicats, propositions...);</li>
@@ -149,11 +149,11 @@
 				<h3>Economie durable et numérique</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques</h4>
 						<li>AC 1 : Mettre à jour et interroger une base de données relationnelle</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est de découvrir l'économie durable et
+						<li>L'objectif de cette ressource est de découvrir l'économie durable et
 						responsable. Les savoir de référence suivants devront être étudiés :</li>
 						<li>Fondements de l'économie (marchés et dysfonctionnements, acteurs 
 						économiques, croissance et déséquilibres économiques, politique économique,
@@ -189,7 +189,6 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
 								<li><a href="3PageComp1.html">Compétence 1</a></li>
