--- a/8PageComp6.html
+++ b/8PageComp6.html
@@ -95,11 +95,11 @@
 				<h3>Développement d'interfaces web</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques<h4>
 						<li>AC 1 : Appréhender l'écosystème numérique</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est d'apprendre les techniques de création de documents
+						<li>L'objectif de cette ressource est d'apprendre les techniques de création de documents
 						numériques sur le web en réponse à des besoins client. Les savoirs de références suivants
 						devront être étudiés :</li>
 						<li>Spécifications d'interfaces utilisateurs, maquettage(sketch, scénarios, persona...);</li>
@@ -118,7 +118,7 @@
 				<h3>Gestion de projet et des organisations</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques<h4>
 						<li>AC 1 : Appréhender l'écosystème numérique</li>
 					</ul>
 					<ul>
@@ -147,11 +147,11 @@
 				<h3>Economie durable et numérique</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques<h4>
 						<li>AC 1 : Appréhender l'écosystème numérique</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est de découvrir l'économie durable et
+						<li>L'objectif de cette ressource est de découvrir l'économie durable et
 						responsable. Les savoir de référence suivants devront être étudiés :</li>
 						<li>Fondements de l'économie (marchés et dysfonctionnements, acteurs 
 						économiques, croissance et déséquilibres économiques, politique économique,
@@ -175,12 +175,12 @@
 				<h3>Anglais technique</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques<h4>
 						<li>AC 4 : Acquérir les compétences interpersonnelles pour travailler 
 						en équipe</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est d'introduire l'anglais informatique et de développer
+						<li>L'objectif de cette ressource est d'introduire l'anglais informatique et de développer
 						sa culture générale et scientifique. Les savoirs de référence suivants devront être étudiés :</li>
 						<li>Décrire en anglais les éléments liés aux applications (interface utilisateur, bases 
 						de données, messages d'erreur...);</li>
@@ -200,13 +200,13 @@
 				<h3>Bases de la communication</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques<h4>
 						<li>AC 1 : Appréhender l'écosystème numérique</li>
 						<li>AC 3 : Acquérir les compétences interpersonnelles pour travailler 
 						en équipe</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est d'aborder les fondamentaux de la
+						<li>L'objectif de cette ressource est d'aborder les fondamentaux de la
 						communication. Les savoirs de référence suivants devront être étudiés :</li>
 						<li>Communication verbale et non verbale;</li>
 						<li>Recherche documentaire, appropriation, réutilisation de
@@ -230,12 +230,12 @@
 				<h3>Projet professionnel et personnel</h3>
 				<div>
 					<ul>
-						<li class="principal">Apprentissages critiques</li>
+						<h4>Apprentissages critiques<h4>
 						<li>AC 4 : Acquérir les compétences interpersonnelles 
 						pour travailler en équipe</li>
 					</ul>
 					<ul>
-						<li class="principal">L'objectif de cette ressource est d'identifier les contenus à mettre 
+						<li>L'objectif de cette ressource est d'identifier les contenus à mettre 
 						en évidence dans le portfolio et d'approfondir la connaissance de soi.
 						Les savoirs de référence suivants devront être étudiés :</li>
 						<li>Mieux se connaître;</li>
@@ -265,7 +265,6 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
 								<li><a href="3PageComp1.html">Compétence 1</a></li>
